fix HmDropdown toggle element appearance (em units cause render-problems on small text, and due to image had a fixed size (12x12) it was cutten off on small text sizes

--- a/src/scss/components/dropdown.scss
+++ b/src/scss/components/dropdown.scss
@@ -4,8 +4,8 @@
     mask-image: $dropdown-toggle-icon;
     border: none;
     background-color: $gray-400;
-    width: 0.75em;
-    height: 0.75em;
+    width: 12px;
+    height: 9px;
     margin-left: 1em;
     vertical-align: bottom;
 }
